--- a/Feedbacksystem/templates/pages/view_faculty_event_evaluations.html
+++ b/Feedbacksystem/templates/pages/view_faculty_event_evaluations.html
@@ -19,14 +19,14 @@
 <div class="table-responsive mt-2">
     <table class="table table-bordered " >
             <tr>
-                <th scope="col" style="color:#fafafa; background: #2a9134">Event</th>
-                <th scope="col" style="color:#fafafa; background: #2a9134">Suggestions and Comments</th>
-                <th scope="col" style="color:#fafafa; background: #2a9134">Average</th>
-                <th scope="col" style="color:#fafafa; background: #2a9134">Rating</th>
-                <th scope="col" style="color:#fafafa; background: #2a9134">Polarity</th>
-                <th scope="col" style="color:#fafafa; background: #2a9134">Academic Year</th>
-                <th scope="col" style="color:#fafafa; background: #2a9134">Semester</th>
-                <th scope="col" style="color:#fafafa; background: #2a9134">Options</th>
+                <th scope="col" >Event</th>
+                <th scope="col" >Suggestions and Comments</th>
+                <th scope="col" >Average</th>
+                <th scope="col" >Rating</th>
+                <th scope="col" >Polarity</th>
+                <th scope="col" >Academic Year</th>
+                <th scope="col" >Semester</th>
+                <th scope="col" >Options</th>
                 
         </tr>
         </thead>
