--- a/Feedbacksystem/templates/pages/president_view_event_evaluations.html
+++ b/Feedbacksystem/templates/pages/president_view_event_evaluations.html
@@ -13,7 +13,11 @@
 
 </form>
 
-
+<form action="{% url 'eventevaluations_csv' %}" method="get">
+    <input type="hidden" name="event_id" value="{{ event.id }}">
+    <input type="hidden" name="{{ request.GET.urlencode }}">
+    <button type="submit" class="btn btn-primary">Export CSV</button>
+</form>
 <table class="table table-bordered table-responsive  " style="margin-top: 1em;">
     <tr>
         <th scope="col">Event</th>
@@ -29,7 +33,7 @@
     <tr>
         <td>{{ i.event.title }} </td>
         <td>{{ i.average_rating }}</td>
-        <td>{{ i.suggestions_and_comments }}</td>
+        <td>{{ i.suggestions_and_comments|truncatechars:50 }}</td>
         <td>{{ i.predicted_sentiment }}</td>
         <td>{{ i.academic_year }}</td>
         <td>{{ i.semester }}</td>
