--- a/Feedbacksystem/templates/pages/stakeholderevaluations.html
+++ b/Feedbacksystem/templates/pages/stakeholderevaluations.html
@@ -86,7 +86,7 @@
               <td>{{ i.date }} </td>
               <td>{{ i.purpose }}</td>
               <td>{{ i.average_rating }}</td>
-              <td>{{ i.suggestions_and_comments }}</td>
+              <td>{{ i.suggestions_and_comments|truncatechars:50 }}</td>
               <td>{{ i.predicted_sentiment }}</td>
               <td>{{ i.academic_year }}</td>
               <td>{{ i.semester }}</td>
