--- a/Feedbacksystem/templates/pages/student_profile.html
+++ b/Feedbacksystem/templates/pages/student_profile.html
@@ -36,7 +36,7 @@
               <li class="list-group-item"><b>Contact Number: </b>{{ student.contact_no }}</li>
               <li class="list-group-item"><b>Status: </b>{{ student.status }}</li>
               <li class="list-group-item"><b>Year & Section: </b>{{ student.Section }}</li>
-              <li class="list-group-item"><b>Role: </b>{% if is_society_president %} Society President {% else %} Student {% endif %}</li>
+              <li class="list-group-item"><b>User Role: </b>{% if is_society_president %} Society President {% else %} Student {% endif %}</li>
               
             </ul>
           </div>
